# dtxstudio-patient-info

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  NOTES.txt  README.md  clinical_patient_updater.py  dtx_merge_patients.bat  dtx_merge_pattients.py  patient_info_updater.py  pyproject.toml  test_clinical_framework.py  test_clinical_matching.py  test_flipped_strategy.py  test_flipped_strategy_simple.py  test_patient_info_updater.py
clinical_matching/: __init__.py
dtxstudio_patient_info/: __init__.py  controller.py  entrypoint.py  main.py  match_keys.py  match_strategies.py  merge_patients.py  utils.py
dtxstudio_patient_info/core/: __init__.py  clinical_service.py  confidence_scoring.py  controller.py  data_models.py  matching_strategies.py  patient_matcher.py  reporting_service.py
dtxstudio_patient_info/reporting/: audit_logger.py
dtxstudio_patient_info/strategies/: __init__.py  deterministic.py  probabilistic.py
dtxstudio_patient_info/utils/: __init__.py  date_similarity.py  italian_cf.py  key_builders.py  normalizers.py
dtxstudio_patient_info1/: controller.py  entrypoint.py  match_keys.py  match_strategies.py  merge_patients.py  utils.py
dtxstudio_patient_info2/: __init__.py  main.py
dtxstudio_patient_info2/core/: controller.py  data_models.py  patient_matcher.py  reporting_service.py
dtxstudio_patient_info2/strategies/: probabilistic.py
dtxstudio_patient_info2/utils/: date_similarity.py  italian_cf.py
examples/: pms_patient_export.sql
tests/: test_1_match_keys.py  test_1_patient_info_updater.py  test_1_utils.py  test_clinical_matching.py  test_clinical_service.py  test_match_keys.py  test_patient_info_updater.py
